docs/book/samples/ch04/escalate.out
error[endpoint]: unhandled err reached main: "no version line"
  born in major_of at escalate.kso:7
